--- a/.github/workflows/xpi-generation.yaml
+++ b/.github/workflows/xpi-generation.yaml
@@ -7,5 +7,5 @@ jobs:
        runs-on: ubuntu-latest
        steps:
            - name: Create XPI file
-             run: pwd && ls
+             run: ls
              working-directory: ./
