--- a/.github/workflows/xpi-generation.yaml
+++ b/.github/workflows/xpi-generation.yaml
@@ -10,6 +10,9 @@ jobs:
        runs-on: ubuntu-latest
        steps:
            - name: Create XPI file
+             uses: actions/checkout@v2
              run: |
                  cd src
                  ls -la
+                 cd ..
+                 cd src && zip -r cmunits.xpi . && mv cmunits.xpi ../
