--- a/.github/workflows/xpi-generation.yaml
+++ b/.github/workflows/xpi-generation.yaml
@@ -9,8 +9,8 @@ jobs:
        name: XPI Gen Job
        runs-on: ubuntu-latest
        steps:
+           - uses: actions/checkout@v2
            - name: Create XPI file
-             uses: actions/checkout@v2
              run: |
                  cd src
                  ls -la
